The 4 button is create

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <header id="buttonList">
       <h1>Simulateur de Requêtes</h1>
       <ul>
-        <li><input type="button" value="Requête A" id="a"></li>
-        <li><input type="button" value="Requête B" id="b"></li>
-        <li><input type="button" value="Requête C" id="c"></li>
+        <li><input type="button" value="Jeu" id="a"></li>
+        <li><input type="button" value="Jeu aléatoire" id="b"></li>
+        <li><input type="button" value="Personnage aléatoire" id="c"></li>
+        <li><input type="button" value="REQUETE D" id="d"></li>
       </ul>
     </header>
     <main id="resultList">
