--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   </head>
   <body>
+    <div class="loading-container hidden">
+      <img src="loading.gif" alt="">
+    </div>
     <header id="buttonList">
-      <h1>Simulateur de Requêtes</h1>
+      <h1>Simulateur de Requête</h1>
       <ul>
-        <li><input type="button" value="Jeu" id="a"></li>
+        <li><input type="button" value="Personnages aléatoire" id="a"></li>
         <li><input type="button" value="Jeu aléatoire" id="b"></li>
-        <li><input type="button" value="Personnage aléatoire" id="c"></li>
-        <li><input type="button" value="REQUETE D" id="d"></li>
-      </ul>
+      </ul>      
     </header>
-    <main id="resultList">
+    <p class="explication">Cette application est un simulateur de requêtes, Chaque bouton renvoit aléatoirement des données via des requêtes AJAX sur une authentification API Key</p>
+    <main id="resultList"></main>
+        
       <!-- Here will be shown the results -->
     </main>
     <script type="text/javascript" src="./vendor/jquery.min.js"></script>
